--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
         android:id="@+id/mylist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="70dp"/>
+        android:layout_marginBottom="70dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,21 +19,21 @@
             android:id="@+id/create_new"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="新建案件"
-            android:textColor="#fff"
-            android:background="@drawable/btn_back"
+            android:layout_marginLeft="15dp"
             android:layout_marginRight="25dp"
-            android:layout_marginLeft="15dp"/>
+            android:layout_weight="1"
+            android:background="@drawable/btn_back"
+            android:text="新建案件"
+            android:textColor="#fff" />
 
         <Button
             android:id="@+id/take_photo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginRight="15dp"
             android:layout_weight="1"
-            android:text="拍照"
-            android:textColor="#fff"
             android:background="@drawable/btn_back"
-            android:layout_marginRight="15dp"/>
+            android:text="拍照"
+            android:textColor="#fff" />
     </LinearLayout>
 </RelativeLayout>
