--- a/src/main/res/layout/create_layout.xml
+++ b/src/main/res/layout/create_layout.xml
@@ -8,214 +8,218 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:gravity="center"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:textSize="15sp"
-            android:text="案件名称"/>
+            android:gravity="center"
+            android:text="案件名称"
+            android:textSize="15sp" />
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="#000000"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:background="#000000" />
 
         <EditText
             android:id="@+id/edit_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:padding="8dp"
-            android:textSize="14sp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/edittext_bg"
-            android:layout_marginRight="10dp"/>
+            android:padding="8dp"
+            android:textSize="14sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:gravity="center"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:textSize="15sp"
-            android:text="勘验人"/>
+            android:gravity="center"
+            android:text="勘验人"
+            android:textSize="15sp" />
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="#000000"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:background="#000000" />
 
         <EditText
+            android:id="@+id/edit_inspector"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:padding="8dp"
-            android:textSize="14sp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/edittext_bg"
-            android:layout_marginRight="10dp"/>
+            android:padding="8dp"
+            android:textSize="14sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:gravity="center"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:textSize="15sp"
-            android:text="现勘号"/>
+            android:gravity="center"
+            android:text="现勘号"
+            android:textSize="15sp" />
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="#000000"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:background="#000000" />
 
         <EditText
+            android:id="@+id/et_xkh"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:padding="8dp"
-            android:textSize="14sp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/edittext_bg"
-            android:layout_marginRight="10dp"/>
+            android:padding="8dp"
+            android:textSize="14sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:gravity="center"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:textSize="15sp"
-            android:text="案发时间"/>
+            android:gravity="center"
+            android:text="案发时间"
+            android:textSize="15sp" />
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="#000000"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:background="#000000" />
 
         <TextView
             android:id="@+id/choose_time_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:padding="8dp"
-            android:textSize="14sp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/edittext_bg"
-            android:layout_marginRight="10dp"/>
+            android:padding="8dp"
+            android:textSize="14sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:gravity="center"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:textSize="15sp"
-            android:text="案发地点"/>
+            android:gravity="center"
+            android:text="案发地点"
+            android:textSize="15sp" />
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="#000000"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:background="#000000" />
 
         <EditText
+            android:id="@+id/et_place"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:padding="8dp"
-            android:textSize="14sp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/edittext_bg"
-            android:layout_marginRight="10dp"/>
+            android:padding="8dp"
+            android:textSize="14sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:gravity="center"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:textSize="15sp"
-            android:text="简要说明"/>
+            android:gravity="center"
+            android:text="简要说明"
+            android:textSize="15sp" />
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="#000000"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:background="#000000" />
 
         <EditText
             android:id="@+id/edit_introduce"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:padding="8dp"
-            android:textSize="14sp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/edittext_bg"
-            android:layout_marginRight="10dp"/>
+            android:padding="8dp"
+            android:textSize="14sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginBottom="20dp"
+        android:layout_marginTop="15dp"
         android:gravity="center"
-        android:layout_marginTop="15dp">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/handin_btn"
             android:layout_width="90dp"
             android:layout_height="40dp"
-            android:text="提交"
-            android:background="@drawable/btn_back"
             android:layout_marginRight="15dp"
-            android:textSize="14sp"/>
+            android:background="@drawable/btn_back"
+            android:text="提交"
+            android:textColor="#fff"
+            android:textSize="14sp" />
 
         <Button
             android:id="@+id/back_btn"
@@ -224,6 +228,7 @@
             android:layout_marginLeft="15dp"
             android:background="@drawable/btn_back"
             android:text="返回"
-            android:textSize="14sp"/>
+            android:textColor="#fff"
+            android:textSize="14sp" />
     </LinearLayout>
 </LinearLayout>
